Fix offline mask z-index

--- a/src/components/OfflineMask/withOfflineMask.module.css
+++ b/src/components/OfflineMask/withOfflineMask.module.css
@@ -5,4 +5,5 @@
     right: 0;
     bottom: 0;
     background: white;
+    z-index: 1000;
 }
